# zacklang

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  arithmetic.ll  test_ast.c  test_ast_to_zir.c  test_comptime_func_fibonacci  test_comptime_func_fibonacci_dp  test_comptime_func_multi_param  test_comptime_func_nested  test_comptime_func_recursive  test_expr  test_func_decl  test_lexer.c  test_mir  test_mir.c  test_mir_phi  test_mir_phi.c  test_parser.c  test_semantic.c  test_static_types.c  test_symbol_table.c  test_symbol_table_direct  test_symbol_table_direct.c  test_token_position  test_var_decl  test_variable_tracking  test_variable_tracking.c  test_variable_tracking_integration  test_variable_tracking_integration.c  test_zir  test_zir.c  test_zir_basic  test_zir_phi  test_zir_phi.c  test_zir_safety  (+12 more)
docs/: examples.md  grammar.ebnf.md  language_guide.md  language_reference.md  style_guide.md  zacklang_to_zir.md  zir_c_api.md  zir_optimization_development.md  zir_optimization_passes.md  zir_overview.md
include/: asm.h  ast.h  ast_to_zir.h  comptime.h  dominance.h  lexer.h  mir.h  parser.h  semantic.h  static_types.h  symbol_table.h  variable_tracking.h  zir.h  zir.hpp  zir_arithmetic.hpp  zir_basic_block.hpp  zir_builder.hpp  zir_c_api.h  zir_comparison.hpp  zir_control_flow.hpp  zir_function.hpp  zir_instruction.hpp  zir_instruction_impl.hpp  zir_logical.hpp  zir_to_mir.h  zir_type.hpp  zir_value.hpp  zir_value_impl.hpp
src/: asm.c  ast.c  ast_to_zir.c  comptime.c  dominance.c  lexer.c  mir.c  parser.c  semantic.c  zir.c  (+9 more)
(+48 files in other folders)
